--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "env BROWSER=firefox expo start --web",
-    "start": "react-native start",
+    "start": "env BROWSER=firefox expo start",
     "test": "jest",
     "postinstall": "./scripts/fix.sh"
   },
@@ -14,6 +14,7 @@
     "@ui-kitten/components": "^5.0.0",
     "@ui-kitten/eva-icons": "^5.0.0",
     "expo": "~40.0.0",
+    "expo-permissions": "^8.1.0",
     "expo-splash-screen": "~0.8.0",
     "expo-updates": "~0.4.0",
     "query-string": "^6.13.7",
