--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "env BROWSER=firefox expo start --web",
+    "build:web": "expo build:web",
     "start": "react-native start",
     "test": "jest",
     "postinstall": "./scripts/fix.sh"
@@ -20,6 +21,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-dotenv": "^2.4.3",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-reanimated": "^1.7.0",
@@ -40,6 +42,7 @@
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-router-native": "^5.1.0",
     "@types/uuid": "^8.3.0",
