--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.21.5",
+    "expo-cli": "^4.0.17",
     "jest-expo": "~40.0.0",
     "prettier": "^2.2.1",
     "typescript": "~4.0.0"
