--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "displayName": "Liqid Chat",
   "expo": {
     "name": "Liqid Chat",
-    "slug": "ochat-client",
+    "slug": "Liqid Chat",
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
