--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~40.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-updates": "~0.4.0",
+    "qs": "^6.9.4",
     "query-string": "^6.13.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -27,7 +28,7 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-screens": "~2.15.0",
     "react-native-svg": "^12.1.0",
-    "react-native-toast-message": "^1.4.2",
+    "react-native-toast-message": "jaxoncreed/react-native-toast-message#master",
     "react-native-unimodules": "^0.9.1",
     "react-native-web": "~0.13.12",
     "react-router-dom": "^5.2.0",
@@ -39,6 +40,7 @@
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@expo/webpack-config": "^0.12.52",
+    "@types/qs": "^6.9.5",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
