--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build:web": "expo build:web",
     "start": "react-native start",
     "test": "jest",
-    "postinstall": "./scripts/fix.sh"
+    "postinstall": "./scripts/fix.sh",
+    "expo": "expo start"
   },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
