--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "web": "env BROWSER=firefox expo start --web",
+    "web": "env BROWSER=firefox expo start --web --https",
     "build:web": "expo build:web",
     "start": "react-native start",
     "test": "jest",
     "postinstall": "./scripts/fix.sh",
-    "expo": "expo start"
+    "expo": "expo start",
+    "clear-cache": "expo r -c"
   },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
@@ -18,6 +19,7 @@
     "expo": "~40.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-updates": "~0.4.0",
+    "expo-web-browser": "^8.6.0",
     "qs": "^6.9.4",
     "query-string": "^6.13.7",
     "react": "16.13.1",
@@ -26,6 +28,7 @@
     "react-native-dotenv": "^2.4.3",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-keyboard-avoiding-scroll-view": "^1.0.1",
     "react-native-reanimated": "^1.7.0",
     "react-native-screens": "~2.15.0",
     "react-native-svg": "^12.1.0",
