--- a/app.json
+++ b/app.json
@@ -10,7 +10,12 @@
       "**/*"
     ],
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "build": {
+        "babel": {
+          "include": ["react-router-native"]
+        }
+      }
     }
   }
 }
