--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-keyboard-avoiding-scroll-view": "^1.0.1",
     "react-native-reanimated": "^1.7.0",
     "react-native-screens": "~2.15.0",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^12.1.0",
     "react-native-toast-message": "jaxoncreed/react-native-toast-message#master",
     "react-native-unimodules": "^0.9.1",
@@ -69,5 +70,6 @@
     "preset": "react-native"
   },
   "private": true,
-  "name": "ochat-client"
+  "name": "ochat-client",
+  "version": "1.0.0"
 }
