--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ui-kitten/components": "^5.0.0",
     "@ui-kitten/eva-icons": "^5.0.0",
     "expo": "~40.0.0",
+    "expo-notifications": "^0.8.2",
     "expo-permissions": "^8.1.0",
     "expo-splash-screen": "~0.8.0",
     "expo-updates": "~0.4.0",
