Removed the hell that is AsyncStorage

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "web-chrome": "env BROWSER=chrome expo start --web --https",
     "build:web": "expo build:web",
     "start": "react-native start",
+    "publish": "expo publish",
     "test": "jest",
     "postinstall": "./scripts/fix.sh",
     "expo": "expo start",
@@ -14,11 +15,11 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
-    "@react-native-community/async-storage": "^1.12.1",
     "@ui-kitten/components": "^5.0.0",
     "@ui-kitten/eva-icons": "^5.0.0",
     "expo": "~40.0.0",
     "expo-notifications": "^0.8.2",
+    "expo-secure-store": "~9.3.0",
     "expo-splash-screen": "~0.8.0",
     "expo-updates": "~0.4.0",
     "expo-web-browser": "^8.6.0",
