--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@eva-design/eva": "^2.0.0",
     "@ui-kitten/components": "^5.0.0",
     "@ui-kitten/eva-icons": "^5.0.0",
+    "debounce-promise": "^3.1.2",
     "expo": "~40.0.0",
     "expo-notifications": "^0.8.2",
     "expo-secure-store": "~9.3.0",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@expo/webpack-config": "^0.12.52",
+    "@types/debounce-promise": "^3.1.3",
     "@types/qs": "^6.9.5",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
