--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "description": "A chat client for Solid Pods",
     "slug": "LiqidChat",
     "scheme": "liqidchat",
+    "privacy": "unlisted",
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
@@ -24,14 +25,17 @@
       }
     },
     "ios": {
-      "icon": "./assets/iosIcon.png"
+      "icon": "./assets/iosIcon.png",
+      "supportsTablet": true,
+      "bundleIdentifier": "team.o.liqidchat"
     },
     "android": {
       "icon": "./assets/androidIcon.png",
       "adaptiveIcon": {
         "foregroundImage": "./assets/androidIcon.png"
       },
-      "package": "com.otherjackson.LiqidChat"
+      "package": "com.otherjackson.LiqidChat",
+      "versionCode": 2
     }
   }
 }
