--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-gesture-handler": "~1.9.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-keyboard-avoiding-scroll-view": "^1.0.1",
+    "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-reanimated": "^1.7.0",
     "react-native-screens": "~2.15.0",
     "react-native-status-bar-height": "^2.6.0",
@@ -54,6 +55,7 @@
     "@babel/core": "~7.9.0",
     "@expo/webpack-config": "^0.12.52",
     "@types/debounce-promise": "^3.1.3",
+    "@types/markdown-it-emoji": "^2.0.0",
     "@types/qs": "^6.9.5",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
