--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "react-router-native": "^5.2.0",
     "socket.io-client": "^3.0.4",
     "use-async-effect": "^2.2.2",
-    "uuid": "^3.4.0"
+    "use-file-picker": "^0.2.1",
+    "uuid": "^3.4.0",
+    "expo-document-picker": "~8.4.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
