--- a/package.json
+++ b/package.json
@@ -19,10 +19,16 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
+    "@react-native-community/clipboard": "^1.5.1",
     "@ui-kitten/components": "^5.0.0",
     "@ui-kitten/eva-icons": "^5.0.0",
     "debounce-promise": "^3.1.2",
     "expo": "~40.0.0",
+    "expo-document-picker": "~8.4.1",
+    "expo-image-picker": "~9.2.0",
+    "expo-image-picker-multiple": "^1.4.1",
+    "expo-images-picker": "^1.3.0",
+    "expo-multiple-media-imagepicker": "^1.2.1",
     "expo-notifications": "^0.8.2",
     "expo-secure-store": "~9.3.0",
     "expo-splash-screen": "~0.8.0",
@@ -50,8 +56,7 @@
     "socket.io-client": "^3.0.4",
     "use-async-effect": "^2.2.2",
     "use-file-picker": "^0.2.1",
-    "uuid": "^3.4.0",
-    "expo-document-picker": "~8.4.1"
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
