--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-gifted-chat": "^0.16.3",
     "react-native-keyboard-avoiding-scroll-view": "^1.0.1",
     "react-native-markdown-display": "^7.0.0-alpha.2",
+    "react-native-mime-types": "^2.3.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-screens": "~2.15.0",
     "react-native-status-bar-height": "^2.6.0",
