--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "socket.io-client": "^3.0.4",
     "use-async-effect": "^2.2.2",
     "use-file-picker": "^0.2.1",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "expo-av": "~8.7.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
